overlays/gcp/us-west1/ops/grafana-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - c1-us-west1.meet.livestand.io
    secretName: meet-livestand-io-tls
  rules:
    - host: c1-us-west1.meet.livestand.io
      http:
        paths:
        # only match /grafana and paths under /grafana/
        - path: /grafana(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: grafana
              port:
                name: http
