overlays/gcp/us-west1/ops/haproxy-ingress-patch.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: jitsi
spec:
  tls:
  - hosts:
    - c1-us-west1.meet.livestand.io
    secretName: meet-livestand-io-tls
  rules:
    - host: c1-us-west1.meet.livestand.io
      http:
        paths:
        - path: /
          backend:
            serviceName: haproxy
            servicePort: 80
